refactor: 枚举 code 语义化 + Product Transition 模式标准化
- ProductStatus/UserStatus 枚举 code 从数字改为语义化字符串（DRAFT/ONLINE/SOLD/OFFLINE/PENDING_REVIEW/REJECTED, NORMAL/DISABLED/LOCKED）
- Product 聚合根统一返回 Transition<Product>，消除 .product()/.event() 链式调用
- ProductTestFixture 简化，defaultProduct/onlineProduct 直接返回 Product
- 所有相关测试用例同步更新到新 API
- 数据库迁移脚本 V1__init_schema.sql 同步更新枚举 CHECK 约束
- 新增 common/event/Transition.java 泛型接口定义
- 新增 PaymentConfirmEvent 统一支付确认事件